--- a/angularjs/.settings/org.eclipse.core.resources.prefs
+++ b/angularjs/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/example14_06.html=UTF-8
+encoding//WebContent/example19_16.html=UTF-8
+encoding//WebContent/example19_17.html=UTF-8
+encoding//WebContent/example19_18.html=UTF-8
