--- a/angularjs/.settings/org.eclipse.core.resources.prefs
+++ b/angularjs/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//WebContent/example14_06.html=UTF-8
 encoding//WebContent/example19_16.html=UTF-8
 encoding//WebContent/example19_17.html=UTF-8
 encoding//WebContent/example19_18.html=UTF-8
+encoding//WebContent/example19_19.html=UTF-8
